# UsedCarPricePredictor-End2End-ML-Pipeline

./: .dockerignore  .env  .env.docker  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Jenkinsfile  Makefile  README.md  Taskfile.yaml  bentoml_mod.py  docker-compose.yml  main.py  model.py  mypy.ini  pyproject.toml  runner.py  schema_test.py
app/: config.py  events.py  model_loader.py  monitor.py  secure.py
app/routes/: routes.py
app/schemas/: schema.py
app/services/: predictor.py
app/utils/: categories_modals.json
models_pipeline/: config.py  data_loader.py  predEvalSave.py  preprocessing.py  training.py  training_models.py
others/: training.py
prometheus/: prometheus.yml
trainer/: config.py
trainer/evaluation/: predEvalSave.py
trainer/evauation/: predEvalSave.py
trainer/extract_cols/: extract_cols.py
trainer/loaders/: data_loader.py
trainer/models/: training.py
trainer/monitor/: monitor.py
trainer/preprocessing/: preprocessing.py
